test/compile-errors/extern-unnecessary-library-name.crow
main void()
	()

f flags c extern
r record c extern
u union c extern
